--- a/VeracityContainerManagementAPI/Web.config
+++ b/VeracityContainerManagementAPI/Web.config
@@ -56,4 +56,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-<connectionStrings><add name="DataModel" connectionString="data source=aof4-vcm.database.windows.net;initial catalog=vcm;persist security info=True;user id=vcm_user;password=Hack4Fest;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+<connectionStrings>
+  <add name="DataModel" connectionString="data source=Data Source=WIN-NBN28VM2C1\SQLEXPRESS2016;Initial Catalog=VeracityManagementDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
+</connectionStrings>
+</configuration>
