--- a/VeracityContainerManagementAPI/Web.config
+++ b/VeracityContainerManagementAPI/Web.config
@@ -57,6 +57,6 @@
     </compilers>
   </system.codedom>
 <connectionStrings>
-  <add name="DataModel" connectionString="data source=Data Source=WIN-NBN28VM2C1\SQLEXPRESS2016;Initial Catalog=VeracityManagementDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
+  <add name="DataModel" connectionString="Data Source=WIN-NBN28VM2C1\SQLEXPRESS2016;Initial Catalog=VeracityManagementDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
 </connectionStrings>
 </configuration>
