--- a/VeracityContainerManagementAPI/packages.config
+++ b/VeracityContainerManagementAPI/packages.config
@@ -17,5 +17,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="SimpleInjector" version="4.0.12" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.0.12" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
