--- a/VeracityContainerManagementAPI/VeracityContainerManagementAPI.csproj
+++ b/VeracityContainerManagementAPI/VeracityContainerManagementAPI.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DB\UserGroups.cs" />
     <Compile Include="DB\Users.cs" />
+    <Compile Include="ViewModels\ContainerAccessVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
