Adding key template Id to ContainerGroup as a default key for sharing

--- a/VeracityContainerManagementAPI/VeracityContainerManagementAPI.csproj
+++ b/VeracityContainerManagementAPI/VeracityContainerManagementAPI.csproj
@@ -69,6 +69,10 @@
       <HintPath>..\packages\SimpleInjector.Integration.WebApi.4.0.12\lib\net45\SimpleInjector.Integration.WebApi.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Swashbuckle.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cd1bb07a5ac7c7bc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Swashbuckle.Core.5.6.0\lib\net40\Swashbuckle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -130,6 +134,10 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="WebActivatorEx, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebActivatorEx.2.0\lib\net40\WebActivatorEx.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
@@ -145,6 +153,7 @@
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ContainerAccessController.cs" />
     <Compile Include="Controllers\ContainerController.cs" />
@@ -153,6 +162,10 @@
     <Compile Include="DB\201711262019174_AddDB.cs" />
     <Compile Include="DB\201711262019174_AddDB.Designer.cs">
       <DependentUpon>201711262019174_AddDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DB\201712171716444_Add key template.cs" />
+    <Compile Include="DB\201712171716444_Add key template.Designer.cs">
+      <DependentUpon>201712171716444_Add key template.cs</DependentUpon>
     </Compile>
     <Compile Include="DB\Configuration.cs" />
     <Compile Include="DB\ContainerGroups.cs" />
@@ -184,6 +197,9 @@
   <ItemGroup>
     <EmbeddedResource Include="DB\201711262019174_AddDB.resx">
       <DependentUpon>201711262019174_AddDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DB\201712171716444_Add key template.resx">
+      <DependentUpon>201712171716444_Add key template.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
