Moving some values to application settings

--- a/VeracityContainerManagementAPI/Web.config
+++ b/VeracityContainerManagementAPI/Web.config
@@ -9,6 +9,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="BearerToken" value=""/>
+    <add key="ApiBaseUri" value="https://ne1dnvglmwappdatavcvp01.azurewebsites.net/"/>
+    <add key="IsApiManager" value="false"/>
+    <add key="Ocp-Apim-Subscription-Key" value=""/>
+ 
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
