--- a/VeracityContainerManagementAPI/VeracityContainerManagementAPI.csproj
+++ b/VeracityContainerManagementAPI/VeracityContainerManagementAPI.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Controllers\ContainerAccessController.cs" />
     <Compile Include="Controllers\ContainerController.cs" />
     <Compile Include="Controllers\ContainerGroupController.cs" />
+    <Compile Include="Controllers\ContainerManagementUserController.cs" />
     <Compile Include="Controllers\UserGroupController.cs" />
     <Compile Include="DB\201711262019174_AddDB.cs" />
     <Compile Include="DB\201711262019174_AddDB.Designer.cs">
@@ -170,6 +171,10 @@
     <Compile Include="DB\201712211126133_Add container management user.cs" />
     <Compile Include="DB\201712211126133_Add container management user.Designer.cs">
       <DependentUpon>201712211126133_Add container management user.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DB\201801211128013_Add OwnerId on Containers ContainerGroups UserGroups.cs" />
+    <Compile Include="DB\201801211128013_Add OwnerId on Containers ContainerGroups UserGroups.Designer.cs">
+      <DependentUpon>201801211128013_Add OwnerId on Containers ContainerGroups UserGroups.cs</DependentUpon>
     </Compile>
     <Compile Include="DB\Configuration.cs" />
     <Compile Include="DB\ContainerGroups.cs" />
@@ -212,6 +217,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DB\201712211126133_Add container management user.resx">
       <DependentUpon>201712211126133_Add container management user.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DB\201801211128013_Add OwnerId on Containers ContainerGroups UserGroups.resx">
+      <DependentUpon>201801211128013_Add OwnerId on Containers ContainerGroups UserGroups.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
