--- a/VeracityContainerManagementAPI/VeracityContainerManagementAPI.csproj
+++ b/VeracityContainerManagementAPI/VeracityContainerManagementAPI.csproj
@@ -160,6 +160,11 @@
     <Compile Include="Controllers\ContainerGroupController.cs" />
     <Compile Include="Controllers\ContainerManagementUserController.cs" />
     <Compile Include="Controllers\UserGroupController.cs" />
+    <Compile Include="DB\201801211622494_Rename column keytemplateId on ContainerGroups.cs" />
+    <Compile Include="DB\201801211622494_Rename column keytemplateId on ContainerGroups.Designer.cs">
+      <DependentUpon>201801211622494_Rename column keytemplateId on ContainerGroups.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Exceptions\ValidTemplateKeyNotFoundException.cs" />
     <Compile Include="DB\201711262019174_AddDB.cs" />
     <Compile Include="DB\201711262019174_AddDB.Designer.cs">
       <DependentUpon>201711262019174_AddDB.cs</DependentUpon>
@@ -228,6 +233,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DB\201801211558064_Container access metadata.resx">
       <DependentUpon>201801211558064_Container access metadata.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DB\201801211622494_Rename column keytemplateId on ContainerGroups.resx">
+      <DependentUpon>201801211622494_Rename column keytemplateId on ContainerGroups.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
