--- a/VeracityContainerManagementAPI/VeracityContainerManagementAPI.csproj
+++ b/VeracityContainerManagementAPI/VeracityContainerManagementAPI.csproj
@@ -205,6 +205,7 @@
     <Compile Include="DB\Users.cs" />
     <Compile Include="ViewModels\ContainerAccessVM.cs" />
     <Compile Include="ViewModels\ContainerGroupVM.cs" />
+    <Compile Include="ViewModels\ContainerVM.cs" />
     <Compile Include="ViewModels\OwnedContainerVM.cs" />
     <Compile Include="ViewModels\VeracityResourcesVM.cs" />
     <Compile Include="ViewModels\VeracityUserVM.cs" />
